Dark mode véglegesítése a profile.html számára

--- a/profile.html
+++ b/profile.html
@@ -114,7 +114,7 @@
                             <span>-count-</span>
                         </div>
                         <div class="commentInformation">
-                            <img src="whiteSVG/comment_25dp_C0C0C0_FILL1_wght400_GRAD0_opsz24.svg" alt="" srcset="">
+                            <img src="Icons/Black Navbar Icons/forum.svg" alt="" class="theme-icon">
                             <span>-count-</span>
                         </div>
                     </div>
