Comment area fejlesztése

--- a/profile.html
+++ b/profile.html
@@ -110,12 +110,11 @@
                             </svg>
                             </div>
                         </label>
-
-                            <span>-count-</span>
+                            <span>648</span>
                         </div>
                         <div class="commentInformation">
                             <img src="Icons/Black Navbar Icons/forum.svg" alt="" class="theme-icon">
-                            <span>-count-</span>
+                            <span>999</span>
                         </div>
                     </div>
 
@@ -127,7 +126,7 @@
                                 <textarea class="comment-area" placeholder="Write a comment..."></textarea>
                                 <div class="comment-controls">
                                     <button class="send-button">
-                                        <img src="whiteSVG/send_40dp_C0C0C0_FILL0_wght400_GRAD0_opsz40.svg" alt="" srcset="">
+                                        <img src="Icons/Black Navbar Icons/send.svg" alt="Search" class="theme-icon">
                                     </button>
                                 </div>
                             </div>
