Dark mode elkezdése home.html-en

--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil</title>
-    <link rel="stylesheet" href="css/light-mode css/light-mode home.css" type="text/css" id="theme">
+    <link rel="stylesheet" href="css/light-mode css/light-mode profile.css" type="text/css" id="theme">
     <link rel="icon" type="image/x-icon" href="favicon-32x32.png">
     <script src="js/responsive.js"></script>
     <script src="js/toggleComments.js"></script>
@@ -123,17 +123,6 @@
                         <div class="Comments">
                             <div class="comment-wrapper">
                                 <div class="text-editor">
-                                    <div class="toolbar">
-                                        <button class="format-btn bold" title="Bold"><b>B</b></button>
-                                        <button class="format-btn italic" title="Italic"><i>I</i></button>
-                                        <button class="format-btn underline" title="Underline"><u>U</u></button>
-                                        <button class="format-btn line-through" title="Strikethrough"><s>S</s></button>
-                                        <select class="font-size" title="Font Size">
-                                            <option value="12px">Small</option>
-                                            <option value="16px" selected>Medium</option>
-                                            <option value="20px">Large</option>
-                                        </select>
-                                    </div>
                                     <div class="editor-content" contenteditable="true" placeholder="Write a comment..."></div>
                                 </div>
                             </div>
@@ -146,7 +135,7 @@
                 <div class="searchBar">
                     <input placeholder="Search..." class="input" name="text" type="text">
                     <button class="button" style="display: flex; justify-content: center; align-items: center;">
-                        <img src="whiteSVG/search_30dp_C0C0C0_FILL1_wght400_GRAD0_opsz24.svg" alt="Search">
+                        <img src="Icons/Black Navbar Icons/search.svg" alt="Search">
                     </button>
                 </div>
 
