commentSection div átírása, plusz ikonok hozzáadása

--- a/profile.html
+++ b/profile.html
@@ -119,7 +119,9 @@
                     </div>
 
                     <div class="commentSection">
-                        <button class="comments-toggle">Open Comments</button>
+                        <button class="comments-toggle">
+                            <span>Open Comments</span>
+                        </button>
                         <div class="Comments">
                             <div class="comment-wrapper">
                                 <div class="text-editor">
@@ -134,7 +136,7 @@
                 
                 <div class="searchBar">
                     <input placeholder="Search..." class="input" name="text" type="text">
-                    <button class="button" style="display: flex; justify-content: center; align-items: center;">
+                    <button class="button">
                         <img src="Icons/Black Navbar Icons/search.svg" alt="Search">
                     </button>
                 </div>
