Login és register oldalak

--- a/dashboard.html
+++ b/dashboard.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
-    <!--<link rel="stylesheet" href="css/teszt.css">-->
+    <title>Feed</title>
     <link rel="stylesheet" href="css/light-mode css/light-mode home.css" type="text/css" id="theme">
-
-    <!-- <link rel="stylesheet" href="css/universal.css"> -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
