--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil</title>
     <link rel="stylesheet" href="css/light-mode css/light-mode profile.css" type="text/css" id="theme">
-    <link rel="icon" type="image/x-icon" href="favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="output-onlinepngtools.png">
     <script src="js/responsive.js"></script>
     <script src="js/toggleComments.js"></script>
     <script src="js/text-area.js"></script>
