--- a/register.html
+++ b/register.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/dark-mode css/loginform.css">
     <title>Register</title>
     <link rel="shortcut icon" href="./output-onlinepngtools.png" type="image/x-icon">
+    <script src="js/password.js"></script>
 </head>
 <body>
     <nav>
@@ -21,8 +22,10 @@
             <input type="email" name="email" id="email">
             <span>Password</span>
             <div class="password">
-                <input type="text" name="password" id="password">
-                <input type="button" value="">
+                <input class="input" name="password" type="password" id="password">
+                <button class="button">
+                    <img src="Icons/visibility.svg" alt="Search" onclick="showPassword()">
+                </button> 
             </div>
             <span>Confirm Password</span>
             <input type="text" name="password" id="password">
