--- a/profile.html
+++ b/profile.html
@@ -56,8 +56,7 @@
                         </div>
                     </div>
                     <div class="middleInformation">
-                        <span id="birthName">WhySoSerious</span>
-                        <span class="username">goofygoober</span>
+                        <span id="birthName">GWAGWAGWA</span>
                     </div>
                     <hr>
                 </div>
@@ -119,9 +118,7 @@
                     </div>
 
                     <div class="commentSection">
-                        <button class="comments-toggle">
-                            <span>Open Comments</span>
-                        </button>
+                        <button class="comments-toggle"><span>View Comments</span></button>
                         <div class="Comments">
                             <div class="comment-wrapper">
                                 <div class="text-editor">
