Navbar javítása login és register html fájlokba

--- a/dashboard.html
+++ b/dashboard.html
@@ -155,17 +155,7 @@
                         </div>
                     </div>
 
-                    <button class="comments-toggle">Open Comments</button>
-                    <div class="Comments">
-                        <div class="comment-wrapper">
-                            <textarea class="comment-area" placeholder="Write a comment..."></textarea>
-                            <div class="comment-controls">
-                                <button class="send-button">
-                                    <img src="Icons/Black Navbar Icons/send.svg" alt="" class="theme-icon">
-                                </button>
-                            </div>
-                        </div>
-                    </div>
+                    <button class="comments-toggle"><a href="commentstest.html">View Comments</a></button>
                 </div>
             </div>
         </div>
