Dark mode elkészítése commentstest.html-nek

--- a/commentstest.html
+++ b/commentstest.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/light-mode css/light-comment.css">
+    <link rel="stylesheet" href="css/light-mode css/light-mode comment.css" id="theme">
     <link rel="shortcut icon" href="output-onlinepngtools.png" type="image/x-icon">
+    <script src="js/commentsChange.js"></script>
     <title>Comment</title>
 </head>
 <body>
@@ -111,7 +112,7 @@
                 <div class="searchBar">
                     <input placeholder="Search..." class="input" name="text" type="text">
                     <button class="button">
-                        <img src="Icons/Black Navbar Icons/search.svg" alt="Search">
+                        <img src="Icons/Black Navbar Icons/search.svg" alt="Search" class="theme-icon">
                     </button>
                 </div>
             </div>
