--- a/profile.html
+++ b/profile.html
@@ -128,7 +128,7 @@
                 <div class="searchBar">
                     <input placeholder="Search..." class="input" name="text" type="text">
                     <button class="button">
-                        <img src="Icons/Black Navbar Icons/search.svg" alt="Search">
+                        <img src="Icons/Black Navbar Icons/search.svg" alt="Search" class="theme-icon">
                     </button>
                 </div>
 
