HTML fájlok váltása kijelzőméret szerint

--- a/dashboard.html
+++ b/dashboard.html
@@ -29,7 +29,8 @@
     <link rel="shortcut icon" href="output-onlinepngtools.png" type="image/x-icon">
     <script src="js/toggleComments.js"></script>
     <script src="js/responsive.js"></script>
-    <script src="js/homeChange.js"></script> 
+    <script src="js/homeChange.js"></script>
+    <script src="js/responsive-redirect.js"></script>
 </head>
 <body>
     <div class="top-left"></div>
@@ -38,8 +39,8 @@
     </div>
     <div class="left">
         <div class="left-icons">
-            <a href="dashboard.html" target="_blank" class="link-size"><span class="material-symbols-outlined" data-tooltip="Home"><img src="Icons/Black Navbar Icons/home.svg" alt="Home icon" class="theme-icon"></span></a>
-            <a href="profile.html" target="_blank" class="link-size"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="Icons/Black Navbar Icons/person.svg" alt="Person icon" class="theme-icon"></span></a>
+            <a href="dashboard.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Home"><img src="Icons/Black Navbar Icons/home.svg" alt="Home icon" class="theme-icon"></span></a>
+            <a href="profile.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="Icons/Black Navbar Icons/person.svg" alt="Person icon" class="theme-icon"></span></a>
             <span class="material-symbols-outlined" data-tooltip="Dark Mode" onclick="toggleTheme()">
                 <img src="Icons/Black Navbar Icons/theme.svg" alt="Theme Toggle" class="theme-icon">
             </span>
